--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Control de Actividades</title>
+	<title>Control de Calidad de Software</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<link href="bootstrap.min.css" rel="stylesheet">
@@ -24,15 +24,19 @@
 		<span class="icon-bar"></span>
 		<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="#">Administrator</a>
+		<a class="navbar-brand" href="#">CMM</a>
 	</div>
 
 	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">      
-		<form class="navbar-form navbar-left" method="GET" role="search">
+		<form class="navbar-form navbar-left">
 		<div class="form-group">
-		<input type="text" name="q" class="form-control" placeholder="Buscar">
+		<select class="form-control" id="selectModelo">
+                    <option value="1">CMMI</option>
+                    <option value="2">ISO9196</option>
+                </select>
+
 		</div>
-		<button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+		<button type="button" onclick="Load()">Cargar</button>
 		</form>
 		
 		<ul class="nav navbar-nav navbar-right">
@@ -75,39 +79,6 @@
 
 	<div class="col-md-10 content">
 
-	<!-- Trigger the modal with a button -->
-	<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#venAct">Agregar Actividad</button>
-
-	<!-- Modal -->
-	<div id="venAct" class="modal fade" role="dialog">
-	  <div class="modal-dialog">
-
-	    <!-- Modal content-->
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal">&times;</button>
-	        <h4 class="modal-title">Actividad</h4>
-	      </div>
-	      <div class="modal-body">
-	        <p>Actividad 1.</p>
-	      </div>
-	      <div class="modal-footer">
-		<div class="col-xs-3">
-		<select class="form-control" >
-	            <option value="1">Incidental</option>
-	            <option value="2">Moderado</option>
-	            <option value="3">Medio</option>
-	            <option value="4">Significativo</option>
-	            <option value="5">Escencial</option>
-	        </select>
-		</div>
-	        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-  		<button type="button" class="btn btn-primary">Asignar Actividad</button>
-	      </div>
-	    </div>
-
-	  </div>
-	</div>
 	<div><br></div>
 	<div class="panel panel-default">
 	<!-- Panel de Actividades -->
