interfaz con BD completa
Falta la integracion de las metricas

--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
 	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">      
 		<form class="navbar-form navbar-left">
 		<div class="form-group">
-		<select class="form-control" id="selectModelo">
-                </select>
-
+        		<select class="form-control" id="selectModelo"> </select>
 		</div>
-		<button type="button" id="cargar" class="btn btn-default">Cargar</button>
+		<button type="button" id="btn_cargar" class="btn btn-default">Cargar</button>
 		</form>
 		
 		<ul class="nav navbar-nav navbar-right">
@@ -63,12 +61,9 @@
 		<nav class="navbar navbar-default" role="navigation">
 		<!-- Main Menu -->
 		<div class="side-menu-container">
-		<ul class="nav navbar-nav">
-		<li class="active"><a href="#"> Menu 1 </a></li>
-		<li class="active"><a href="#"> Menu 1 </a></li>
-		<li class="active"><a href="#"> Menu 1 </a></li>
-		<li class="active"><a href="#"> Menu 1 </a></li>
-		</ul>
+                  <ul class="nav navbar-nav">
+                    <span id="listaTrait"></span>
+                  </ul>
 		</div>
 		</nav>
 		</div>
@@ -79,11 +74,9 @@
 	<div class="col-md-10 content">
 
 	<div><br></div>
-	<div class="panel panel-default">
-	<!-- Panel de Actividades -->
-		<div class="panel-heading">Actividad</div>
-		<div class="panel-body">coment </div>
-	<!-- fin panel de Actividades -->
+	<div class="panel panel-default" id="panelAtributos">
+	<!-- Panel de Atributos -->
+	<!-- fin panel de Atributos -->
 	</div>
 	</div>
 	<div id="listaMenu"></div>
